Prevent weird break in description for words like "thunderstorms"

--- a/src/WeatherDisplay.css
+++ b/src/WeatherDisplay.css
@@ -36,6 +36,7 @@
 .weather-display-description {
     font-size: 2em;
     grid-area: description;
+    overflow-wrap: normal;
 }
 
 .weather-display-subtitle {
